# HaloZeroGL2_CMake

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: ProjectLibs.cmake
src/Engine/: BaseGame.cpp  BaseGame.h  SoundEffect.h  SoundStream.h  Texture.cpp  structs.cpp  structs.h  utils.cpp  utils.h
src/HaloZero/: AnimatedSprite.cpp  AnimatedSprite.h  Camera.cpp  Camera.h  CasingSprite.cpp  CasingSprite.h  Constants.h  EliteRifle.cpp  EliteRifle.h  EnemyBase.cpp  EnemyBase.h  EnvironmentSprite.cpp  EnvironmentSprite.h  Game.cpp  Game.h  GunPickup.cpp  GunPickup.h  HUD.cpp  HUD.h  Hunter.cpp  Hunter.h  ImpNeedle.cpp  ImpNeedle.h  ImpPistol.cpp  ImpPistol.h  Jackal.cpp  Jackal.h  Level.cpp  Level.h  MasterChiefBase.cpp  MasterChiefBase.h  MasterChiefLegs.cpp  MasterChiefLegs.h  MasterChiefTorso.cpp  MasterChiefTorso.h  Projectile.cpp  Projectile.h  Screen.cpp  Screen.h  SoundManager.cpp  (+8 more)
testsrc/: CMakeTest.cpp  CMakeTest.h
